--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "dev": "webpack --mode development",
-    "build": "webpack --mode production",
-    "start": "webpack-dev-server --mode development --open"
+    "start": "webpack --mode production",
+    "test": "webpack-dev-server --mode development --open"
   },
   "author": "Jonas Schemedtmann",
   "license": "ISC",
