--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "webpack --mode development",
-    "start": "webpack --mode production",
+    "start": "webpack --mode production --open",
     "test": "webpack-dev-server --mode development --open"
   },
   "author": "Jonas Schemedtmann",
