--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "webpack --mode development",
     "start": "webpack --mode production --open",
-    "test": "webpack-dev-server --mode development --open"
+    "test": "webpack-dev-server --mode development --open",
+    "heroku-prebuild": "npm install --dev"
   },
   "author": "Jonas Schemedtmann",
   "license": "ISC",
