--- a/package.json
+++ b/package.json
@@ -5,9 +5,8 @@
   "main": "index.js",
   "scripts": {
     "dev": "webpack --mode development",
-    "start": "webpack --mode production --open",
-    "test": "webpack-dev-server --mode development --open",
-    "heroku-prebuild": "npm install --dev"
+    "start": "node server.js",
+    "test": "webpack-dev-server --mode development --open"
   },
   "author": "Jonas Schemedtmann",
   "license": "ISC",
